FIX - send 버튼 직접 클릭했을 때 메시지 전송되지 않고 새로고침만 되는 이슈 해결
### DESC
- form 태그에서 action 을 지우고 send button 은 onclick 을 통해 메시지를 전송하도록 하자
- submit 함수명을 sendMessage 로 변경

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <ul id="messages"></ul>
-    <form id="form" action="">
+    <form id="form">
       <textarea id="input" onkeydown="inputKeyDown(event)" autofocus></textarea>
-      <button class="send_button" type="submit">Send</button>
+      <button class="send_button" type="button" onclick="sendMessage(event)">Send</button>
     </form>
     <div id="typing" class="typing" hidden></div>
     <div id="members_count" class="members_count"></div>
