EDIT - 메시지 전송 주체에 따라 css 변경
### DESC
- 기존에는 시스템 메시지(연결, 해제)는 가운데 정렬 및 작은 폰트 사이즈, 내가 전송한 메시지는 오른쪽 정렬, 상대가 전송한 메시지는 왼쪽 정렬 외에는 css 구분이 없었고 odd row 마다 background color 를 다르게 했다
- odd row 의 background color 를 지우고, 내가 보낸 메시지의 background color 를 yellow 로 설정하자
- 시스템 메시지는 300px shrink 로 보여주자

--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
   }
 
   #messages > pre {
-    padding: 0.5rem 1rem;
     font-size: 18px;
-  }
-
-  #messages > pre:nth-child(odd) {
-    background: #dadada;
+    padding: 0.5rem 1rem;
+    border: 3px solid #aaaaaa;
+    border-radius: 14px;
   }
 
   #form {
