--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   #messages > pre {
     font-size: 18px;
     padding: 0.5rem 1rem;
-    border: 3px solid #aaaaaa;
+    border: 3px solid #888888;
     border-radius: 14px;
   }
 
@@ -69,13 +69,13 @@
 
   #form > button {
     width: 20%;
-    background: #333;
+    background: #333333;
     border: none;
     padding: 0 3.25rem;
     margin: 0.25rem;
     border-radius: 3px;
     outline: none;
-    color: #fff;
+    color: #ffffff;
   }
 
   .send_button {
