EDIT - 메시지의 style 을 class 를 통해 적용
### DESC
- js 에서 item.style 로 넣어주지 않고, class 를 적용하자
- width 계산은 추후 고려 필요

--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
     border-radius: 14px;
   }
 
+  #messages > pre.me {
+    background: #e4e400;
+    border: 1px solid #e4e400;
+    margin-left: auto;
+  }
+
+  #messages > pre.you {
+    background: #666666;
+    border: 1px solid #666666;
+    color: #f7f7f7;
+  }
+
+  #messages > pre.system {
+    font-size: 14px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   #form {
     background: rgba(200, 200, 200, 1);
     padding: 0.25rem;
