FEATURE - 작성자 이름을 메시지 내용에서 분리하자
### DESC
- 기존에 작성자명을 메시지 본문에 <...>\n#{message} 형식으로 붙이고 있었다
- 이를 아예 별개 div element 로 분리시켜 메시지에서 작성자명을 없애자
- 작성자명의 font size 는 메시지보다 약간 작게 설정하고, 작성자명 바로 다음 메시지는 margin top 을 0으로 설정해주자

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     padding: 0;
   }
 
+  .sender_name {
+    font-size: 14px;
+    margin-left: 10px;
+  }
+
   #messages > pre {
     font-size: 18px;
     padding: 0.5rem 1rem;
