--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     padding: 0.5rem 1rem;
     border: 3px solid #888888;
     border-radius: 14px;
+    margin-bottom: 0;
   }
 
   #messages > pre.me {
@@ -61,6 +62,24 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .time {
+    font-size: 12px;
+    margin-bottom: 1rem;
+  }
+
+  .time_me {
+    text-align: right;
+    margin-right: 10px;
+  }
+
+  .time_you {
+    margin-left: 10px;
+  }
+
+  .time_system {
+    text-align: center;
   }
 
   #form {
