EDIT - 본인 메시지 배경색을 좀더 밝게 변경

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   }
 
   #messages > pre.me {
-    background: #e4e400;
-    border: 1px solid #e4e400;
+    background: #eeee00;
+    border: 1px solid #eeee00;
     margin-left: auto;
   }
 
